tests/spec/emit/snapshots/let_shadowing_annotated_unknown_declares_any.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn identity(value: int) -> int {
    value
  }
  
  fn describe(value: Unknown) -> string {
    match assert_type<string>(value) {
      Some(text) => text,
      None => "",
    }
  }
  
  fn test() {
    let value = 1
    let mut value: Unknown = identity(value)
    value = "two"
    if describe(value) != "two" {
      panic("shadowing Unknown binding was declared at the concrete type")
    }
  }
---
package main

func identity(value int) int {
	return value
}

func describe(value any) string {
	ret_1, ok := value.(string)
	if ok {
		text := ret_1
		return text
	} else {
		return ""
	}
}

func test() {
	value := 1
	var value_1 any = identity(value)
	value_1 = "two"
	if describe(value_1) != "two" {
		panic("shadowing Unknown binding was declared at the concrete type")
	}
}
