tests/spec/emit/snapshots/let_shadowing_multiple_times.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nfn test(cond1: bool, cond2: bool) -> int {\n  let x = 1;\n  let x = if cond1 { 2 } else { 3 };\n  let x = if cond2 { x * 10 } else { x * 20 };\n  x\n}\n"
---
package main

func test(cond1, cond2 bool) int {
	var x int
	if cond1 {
		x = 2
	} else {
		x = 3
	}
	var x_1 int
	if cond2 {
		x_1 = x * 10
	} else {
		x_1 = x * 20
	}
	return x_1
}
