tests/spec/emit/snapshots/let_shadowing_three_levels_method_call.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test() -> int {
    let x = 10;
    let x = "now a string";
    let x = x.length();
    x
  }
---
package main

func test() int {
	x := "now a string"
	x_1 := len(x)
	return x_1
}
