tests/spec/emit/snapshots/let_shadowing_with_match_expression.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    let x = 1;
    let x = match opt {
      Some(v) => v,
      None => 0,
    };
    x
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	var x int
	if opt.Tag == lisette.OptionSome {
		x = opt.SomeVal
	} else {
		x = 0
	}
	return x
}
