tests/spec/emit/snapshots/let_shadowing_with_type_change.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test() -> string {
    let x = 42;
    let x = "hello";
    x
  }
---
package main

func test() string {
	x := "hello"
	return x
}
