tests/spec/emit/snapshots/let_struct_pattern_on_go_interface_asserts_type.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn area(s: shapes.Shape) -> int {
    let shapes.Rect { W: w, H: h } = s
    w * h
  }
---
package main

import "example.com/shapes"

func area(s shapes.Shape) int {
	asserted := s.(shapes.Rect)
	w := asserted.W
	h := asserted.H
	return w * h
}
