tests/spec/emit/snapshots/let_tuple_all_unused_bindings.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let (_a, _b) = (1, 2)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	_ = lisette.MakeTuple2[int, int](1, 2)
}
