tests/spec/emit/snapshots/let_unit_call_shadow.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn foo() { }
  
  fn main() {
    let x = foo()
    let _ = x
    let x = foo()
    let _ = x
  }
---
package main

func foo() {}

func main() {
	foo()
	foo()
}
