tests/spec/emit/snapshots/let_wildcard_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn compute() -> int { 42 }
  
  fn test() {
    let _ = compute();
  }
---
package main

func compute() int {
	return 42
}

func test() {
	compute()
}
